# LegoRobot

./: CMakeLists.txt  Resource.cpp  common.cpp  common.h  main.cpp
.github/workflows/: mirror.yml
CheckForIntersection/: CheckForIntersection.cpp  CheckForIntersection.h
FileProcessing/: FileProcessing.cpp  FileProcessing.h
FileWriting/: FileProcessing.cpp  FileProcessing.h
MappingLogic/: IntersectionDetails.cpp  IntersectionDetails.h
MonitorGyroscope/: GyroMonitor.cpp  GyroMonitor.h  MonitorIfStuck.cpp  MonitorIfStuck.h
MonitorIfStuck/: MonitorIfStuck.cpp
Motor/: motor.cpp  motor.h
Movement/: rotation.cpp  rotation.h  wheelsMovement.cpp  wheelsMovement.h
PID/: PID.cpp  PID.h
Sensors/: getSensorData.cpp  getSensorData.h
SpecialCases/: SpecialCases.cpp  SpecialCases.h
brickpi/: BrickPi3.cpp  BrickPi3.h  brickpi_types.h  spi.cpp  spi.h
